// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test/scanner.test.ts should be scan application 1`] = `
{
  "extraPluginConfig": {},
  "refMap": {
    "@artus/injection": {
      "items": [],
      "packageVersion": undefined,
      "pluginConfig": {},
      "relativedPath": "../../../node_modules/@artus/injection/lib",
    },
    "_app": {
      "items": [
        {
          "extname": ".ts",
          "filename": "config.default.ts",
          "loader": "config",
          "loaderState": {
            "exportNames": [],
          },
          "path": "src/config/config.default",
          "source": "app",
          "unitName": "_app",
        },
        {
          "extname": ".ts",
          "filename": "config.dev.ts",
          "loader": "config",
          "loaderState": {
            "exportNames": [],
          },
          "path": "src/config/config.dev",
          "source": "app",
          "unitName": "_app",
        },
        {
          "extname": ".ts",
          "filename": "plugin.default.ts",
          "loader": "config",
          "loaderState": {
            "exportNames": [],
          },
          "path": "src/config/plugin.default",
          "source": "app",
          "unitName": "_app",
        },
        {
          "extname": ".ts",
          "filename": "plugin.dev.ts",
          "loader": "config",
          "loaderState": {
            "exportNames": [],
          },
          "path": "src/config/plugin.dev",
          "source": "app",
          "unitName": "_app",
        },
        {
          "extname": ".ts",
          "filename": "hello.ts",
          "loader": "module",
          "loaderState": {
            "exportNames": [
              "default",
            ],
          },
          "path": "src/controllers/hello",
          "source": "app",
          "unitName": "_app",
        },
        {
          "extname": ".json",
          "filename": "exception.json",
          "loader": "exception",
          "loaderState": {
            "exportNames": [],
          },
          "path": "src/exception",
          "source": "app",
          "unitName": "_app",
        },
        {
          "extname": ".ts",
          "filename": "default.ts",
          "loader": "exception-filter",
          "loaderState": {
            "exportNames": [
              "MockExceptionFilter",
            ],
          },
          "path": "src/filter/default",
          "source": "app",
          "unitName": "_app",
        },
        {
          "extname": ".ts",
          "filename": "koa_app.ts",
          "loader": "module",
          "loaderState": {
            "exportNames": [
              "default",
            ],
          },
          "path": "src/koa_app",
          "source": "app",
          "unitName": "_app",
        },
        {
          "extname": ".ts",
          "filename": "lifecycle.ts",
          "loader": "lifecycle-hook-unit",
          "loaderState": {
            "exportNames": [
              "default",
            ],
          },
          "path": "src/lifecycle",
          "source": "app",
          "unitName": "_app",
        },
        {
          "extname": ".ts",
          "filename": "hello.ts",
          "loader": "module",
          "loaderState": {
            "exportNames": [
              "default",
            ],
          },
          "path": "src/services/hello",
          "source": "app",
          "unitName": "_app",
        },
      ],
      "packageVersion": undefined,
      "pluginConfig": {
        "default": {
          "mysql": {
            "enable": false,
            "refName": "src/mysql_plugin",
          },
          "redis": {
            "enable": true,
            "refName": "src/redis_plugin",
          },
          "testDuplicate": {
            "enable": false,
            "refName": "@artus/injection",
          },
        },
        "dev": {
          "testDuplicate": {
            "enable": true,
            "refName": "src/test_duplicate_plugin",
          },
        },
      },
      "relativedPath": "",
    },
    "src/redis_plugin": {
      "items": [
        {
          "extname": ".ts",
          "filename": "app.ts",
          "loader": "lifecycle-hook-unit",
          "loaderState": {
            "exportNames": [
              "default",
            ],
          },
          "path": "src/redis_plugin/app",
          "source": "plugin",
          "unitName": "redis",
        },
      ],
      "packageVersion": undefined,
      "pluginConfig": {},
      "pluginMetadata": {
        "exclude": [
          "not_to_be_scanned_dir",
          "not_to_be_scanned_file.ts",
        ],
        "name": "redis",
      },
      "relativedPath": "src/redis_plugin",
    },
    "src/test_duplicate_plugin": {
      "items": [],
      "packageVersion": undefined,
      "pluginConfig": {},
      "pluginMetadata": {
        "name": "testDuplicate",
      },
      "relativedPath": "src/test_duplicate_plugin",
    },
  },
  "version": "2",
}
`;

exports[`test/scanner.test.ts should scan application with nesting preset a which defined in options 1`] = `
{
  "extraPluginConfig": {
    "preset_a": {
      "enable": true,
      "refName": "../plugins/preset_a",
    },
  },
  "refMap": {
    "../plugins/plugin_a": {
      "items": [],
      "packageVersion": "0.0.1",
      "pluginConfig": {},
      "pluginMetadata": {
        "dependencies": [
          {
            "name": "plugin-b",
          },
          {
            "name": "plugin-c",
            "optional": true,
          },
        ],
        "name": "plugin-a",
      },
      "relativedPath": "../plugins/plugin_a",
    },
    "../plugins/plugin_b": {
      "items": [],
      "packageVersion": undefined,
      "pluginConfig": {},
      "pluginMetadata": {
        "dependencies": [
          {
            "name": "plugin-c",
          },
        ],
        "name": "plugin-b",
      },
      "relativedPath": "../plugins/plugin_b",
    },
    "../plugins/plugin_d": {
      "items": [],
      "packageVersion": undefined,
      "pluginConfig": {},
      "pluginMetadata": {
        "dependencies": [
          {
            "name": "plugin-c",
            "optional": true,
          },
        ],
        "name": "plugin-d",
      },
      "relativedPath": "../plugins/plugin_d",
    },
    "../plugins/plugin_with_entry_a": {
      "items": [],
      "packageVersion": undefined,
      "pluginConfig": {},
      "pluginMetadata": {
        "name": "plugin-with-entry-a",
      },
      "relativedPath": "../plugins/plugin_with_entry_a/mock_lib",
    },
    "../plugins/plugin_with_entry_b": {
      "items": [],
      "packageVersion": undefined,
      "pluginConfig": {},
      "pluginMetadata": {
        "name": "plugin-with-entry-b",
      },
      "relativedPath": "../plugins/plugin_with_entry_b/mock_lib",
    },
    "../plugins/preset_a": {
      "items": [
        {
          "extname": ".ts",
          "filename": "plugin.default.ts",
          "loader": "config",
          "loaderState": {
            "exportNames": [],
          },
          "path": "../plugins/preset_a/config/plugin.default",
          "source": "plugin",
          "unitName": "preset_a",
        },
      ],
      "packageVersion": undefined,
      "pluginConfig": {
        "default": {
          "a": {
            "enable": false,
          },
          "plugin-with-entry-a": {
            "enable": true,
            "refName": "../plugins/plugin_with_entry_a",
          },
          "preset_b": {
            "enable": true,
            "refName": "../plugins/preset_b",
          },
          "preset_c": {
            "enable": true,
            "refName": "../plugins/preset_c",
          },
        },
      },
      "pluginMetadata": {
        "name": "preset_a",
      },
      "relativedPath": "../plugins/preset_a",
    },
    "../plugins/preset_b": {
      "items": [
        {
          "extname": ".ts",
          "filename": "plugin.default.ts",
          "loader": "config",
          "loaderState": {
            "exportNames": [],
          },
          "path": "../plugins/preset_b/config/plugin.default",
          "source": "plugin",
          "unitName": "preset_b",
        },
      ],
      "packageVersion": undefined,
      "pluginConfig": {
        "default": {
          "a": {
            "enable": true,
            "refName": "../plugins/plugin_a",
          },
          "b": {
            "enable": true,
            "refName": "../plugins/plugin_b",
          },
          "plugin-with-entry-b": {
            "enable": true,
            "refName": "../plugins/plugin_with_entry_b",
          },
        },
      },
      "pluginMetadata": {
        "name": "preset_b",
      },
      "relativedPath": "../plugins/preset_b",
    },
    "../plugins/preset_c": {
      "items": [
        {
          "extname": ".ts",
          "filename": "plugin.default.ts",
          "loader": "config",
          "loaderState": {
            "exportNames": [],
          },
          "path": "../plugins/preset_c/config/plugin.default",
          "source": "plugin",
          "unitName": "preset_c",
        },
      ],
      "packageVersion": undefined,
      "pluginConfig": {
        "default": {
          "b": {
            "enable": false,
            "refName": "../plugins/plugin_b",
          },
          "c": {
            "enable": false,
            "refName": "../plugins/plugin_c",
          },
          "d": {
            "enable": true,
            "refName": "../plugins/plugin_d",
          },
          "plugin-with-entry-c": {
            "enable": false,
            "refName": "../plugins/plugin_with_entry_c",
          },
        },
      },
      "pluginMetadata": {
        "name": "preset_c",
      },
      "relativedPath": "../plugins/preset_c",
    },
    "_app": {
      "items": [],
      "packageVersion": undefined,
      "pluginConfig": {},
      "relativedPath": "",
    },
  },
  "version": "2",
}
`;

exports[`test/scanner.test.ts should scan application with single preset b which defined in config 1`] = `
{
  "extraPluginConfig": {},
  "refMap": {
    "../plugins/plugin_a": {
      "items": [],
      "packageVersion": "0.0.1",
      "pluginConfig": {},
      "pluginMetadata": {
        "dependencies": [
          {
            "name": "plugin-b",
          },
          {
            "name": "plugin-c",
            "optional": true,
          },
        ],
        "name": "plugin-a",
      },
      "relativedPath": "../plugins/plugin_a",
    },
    "../plugins/plugin_b": {
      "items": [],
      "packageVersion": undefined,
      "pluginConfig": {},
      "pluginMetadata": {
        "dependencies": [
          {
            "name": "plugin-c",
          },
        ],
        "name": "plugin-b",
      },
      "relativedPath": "../plugins/plugin_b",
    },
    "../plugins/plugin_with_entry_b": {
      "items": [],
      "packageVersion": undefined,
      "pluginConfig": {},
      "pluginMetadata": {
        "name": "plugin-with-entry-b",
      },
      "relativedPath": "../plugins/plugin_with_entry_b/mock_lib",
    },
    "../plugins/preset_b": {
      "items": [
        {
          "extname": ".ts",
          "filename": "plugin.default.ts",
          "loader": "config",
          "loaderState": {
            "exportNames": [],
          },
          "path": "../plugins/preset_b/config/plugin.default",
          "source": "plugin",
          "unitName": "preset_b",
        },
      ],
      "packageVersion": undefined,
      "pluginConfig": {
        "default": {
          "a": {
            "enable": true,
            "refName": "../plugins/plugin_a",
          },
          "b": {
            "enable": true,
            "refName": "../plugins/plugin_b",
          },
          "plugin-with-entry-b": {
            "enable": true,
            "refName": "../plugins/plugin_with_entry_b",
          },
        },
      },
      "pluginMetadata": {
        "name": "preset_b",
      },
      "relativedPath": "../plugins/preset_b",
    },
    "_app": {
      "items": [
        {
          "extname": ".ts",
          "filename": "plugin.default.ts",
          "loader": "config",
          "loaderState": {
            "exportNames": [],
          },
          "path": "config/plugin.default",
          "source": "app",
          "unitName": "_app",
        },
      ],
      "packageVersion": undefined,
      "pluginConfig": {
        "default": {
          "preset_b": {
            "enable": true,
            "refName": "../plugins/preset_b",
          },
        },
      },
      "relativedPath": "",
    },
  },
  "version": "2",
}
`;

exports[`test/scanner.test.ts should scan application with single preset c which defined in options 1`] = `
{
  "extraPluginConfig": {
    "preset_c": {
      "enable": true,
      "refName": "../plugins/preset_c",
    },
  },
  "refMap": {
    "../plugins/plugin_d": {
      "items": [],
      "packageVersion": undefined,
      "pluginConfig": {},
      "pluginMetadata": {
        "dependencies": [
          {
            "name": "plugin-c",
            "optional": true,
          },
        ],
        "name": "plugin-d",
      },
      "relativedPath": "../plugins/plugin_d",
    },
    "../plugins/preset_c": {
      "items": [
        {
          "extname": ".ts",
          "filename": "plugin.default.ts",
          "loader": "config",
          "loaderState": {
            "exportNames": [],
          },
          "path": "../plugins/preset_c/config/plugin.default",
          "source": "plugin",
          "unitName": "preset_c",
        },
      ],
      "packageVersion": undefined,
      "pluginConfig": {
        "default": {
          "b": {
            "enable": false,
            "refName": "../plugins/plugin_b",
          },
          "c": {
            "enable": false,
            "refName": "../plugins/plugin_c",
          },
          "d": {
            "enable": true,
            "refName": "../plugins/plugin_d",
          },
          "plugin-with-entry-c": {
            "enable": false,
            "refName": "../plugins/plugin_with_entry_c",
          },
        },
      },
      "pluginMetadata": {
        "name": "preset_c",
      },
      "relativedPath": "../plugins/preset_c",
    },
    "_app": {
      "items": [],
      "packageVersion": undefined,
      "pluginConfig": {},
      "relativedPath": "",
    },
  },
  "version": "2",
}
`;
